--- a/tests/anchor/programs/basic/Cargo.toml
+++ b/tests/anchor/programs/basic/Cargo.toml
@@ -2,7 +2,7 @@
 name = "basic"
 version = "0.1.0"
 description = "Created with Anchor"
-rust-version = "1.59"
+rust-version = "1.68.0"
 edition = "2021"
 
 [lib]
@@ -14,4 +14,5 @@ no-entrypoint = []
 cpi = ["no-entrypoint"]
 
 [dependencies]
-anchor-lang = "0.26.0"
+anchor-lang = "0.28.0"
+ahash = "=0.8.6"
