--- a/tests/test-bpf/Cargo.toml
+++ b/tests/test-bpf/Cargo.toml
@@ -5,18 +5,21 @@ edition = "2021"
 publish = false
 
 [dependencies]
-solana-program = "=1.16.18"
-ahash = "=0.8.6"
+solana-program = "=1.17.34"
+ahash = "=0.8.5"
 
 [features]
 test-bpf = []
 
 [dev-dependencies]
 assert_matches = "1.5.0"
-solana-logger = "=1.16.18"
-solana-program-test = "=1.16.18"
-solana-sdk = "=1.16.18"
-solana-validator = "=1.16.18"
+solana-logger = "=1.17.34"
+solana-program-test = "=1.17.34"
+solana-sdk = "=1.17.34"
+solana-validator = "=1.17.34"
+
+[patch.crates-io]
+solana_rbpf = { git = "https://github.com/solana-labs/rbpf", tag = "v0.8.0" }
 
 [lib]
 crate-type = ["cdylib", "lib"]
